# Synthetic-Data-Artist

./: README.md  config.yaml  pyproject.toml  requirements-vae.txt  requirements.txt
.github/workflows/: ci.yml
data/: synthetic_data_copula_run.csv
outputs/copula_run/: metrics.json  quality_summary.csv
outputs/vae_run/: metrics.json  quality_summary.csv
reports/: copula_run_report.html  vae_run_report.html
src/: config.py  data.py  main.py  schema.py
src/evaluation/: __init__.py  metrics.py  plots.py
src/evaluation/metrics/: _common.py  distribution.py
src/models/: copula.py  vae.py
src/reporting/: html_report.py
synthetic_data_artist/: __init__.py  config.py  data.py
synthetic_data_artist/evaluation/: plots.py
synthetic_data_artist/evaluation/metrics/: __init__.py  _common.py  privacy.py  utility.py
synthetic_data_artist/models/: __init__.py  copula.py  vae.py
synthetic_data_artist/reporting/: html_report.py
tests/: test_cli_and_validation.py  test_core_contracts.py  test_enhanced_evaluation_metrics.py  test_project_integrity.py
