[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data-artist"
version = "0.1.0"
description = "Generate and evaluate synthetic tabular data with Copula and VAE methods."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.0,<4",
    "scikit-learn>=1.3,<2",
    "scipy>=1.10,<2",
    "matplotlib>=3.7,<4",
    "seaborn>=0.13,<0.14",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
# Neural VAE generator (python -m synthetic_data_artist.main --method vae).
vae = ["torch>=2.0,<3"]

[project.scripts]
synthetic-data-artist = "synthetic_data_artist.main:main"

[tool.setuptools.packages.find]
include = ["synthetic_data_artist*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F: pyflakes + pycodestyle, I: import sorting, B: bugbear,
# SIM: simplifications, UP: pyupgrade modern-syntax suggestions.
select = ["E", "F", "I", "B", "SIM", "UP"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
# Third-party scientific libraries (numpy, pandas, sklearn, torch, seaborn, yaml)
# ship without complete type stubs; silence missing-stub noise rather than vendor
# stubs we do not control.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
# First-party code must be fully annotated.
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# The VAE module is a thin wrapper over PyTorch, whose runtime objects are
# dynamically typed; requiring annotations on its internal nn.Module helpers
# would add Any-noise without real safety. Strict typing still applies elsewhere.
module = "synthetic_data_artist.models.vae"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
branch = true
source = ["synthetic_data_artist"]

[tool.coverage.report]
show_missing = true
